# dynamic-kanban-mcp

./: .gitignore  CLAUDE.md  README.md  config.py  kanban-board.js  kanban_controller.py  mcp-kanban-server.py  models.py  noxfile.py  pyproject.toml  registry.py
.claude-plugin/: marketplace.json
cc-board/: CLAUDE.md
cc-board/.claude-plugin/: plugin.json
cc-board/commands/: add.md  analyze.md  configure.md  import.md  init.md  prepare.md  session.md  setup.md  start.md  status.md  stop.md  task.md  uninstall.md  validate.md
cc-board/skills/setup/: SKILL.md
cc-board/skills/start/: SKILL.md
cc-board/skills/status/: SKILL.md
cc-board/skills/stop/: SKILL.md
cc-board/skills/uninstall/: SKILL.md
scripts/: enable-kanban.sh  kanban-hook.sh
server/: config.py  kanban_controller.py  mcp-kanban-server.py  mcp_protocol.py  models.py  registry.py
ui/: dashboard.html  kanban-board.html  kanban-board.js
