[project]
name = "dynamic-kanban-mcp"
version = "3.0.0"
description = "Dynamic Kanban MCP Server with WebSocket sync"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pytest>=8.0",
    "ruff>=0.9",
    "ty>=0.0.1a0",
]

[project.scripts]
kanban-mcp = "mcp_kanban_server:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "B008",  # function calls in default arguments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"
